fix: spacing number

--- a/src/app/components/numbers/numbers.component.scss
+++ b/src/app/components/numbers/numbers.component.scss
@@ -1,5 +1,5 @@
 .numbers {
-  padding: 5rem 0 0;
+  padding: 8rem 0 0;
   &__col {
     width: calc(100% / 3);
     padding-right: 3rem;
